--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,3 +4,6 @@
   year: June, 2014 &mdash; January, 2015
   # awards:
   # summary:
+  degree: Slacky PAcxky
+  uni: Shady
+  year: Smach jan 5 2020
